fix data table overflow and margin and add supported formats tip to upload page

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -878,6 +878,12 @@ form {
     p {
       margin: 0 0 1rem;
     }
+    .format {
+      display: inline-block;
+      padding: .2rem .6rem;
+      background: #f7f7f7;
+      border-radius: 3px;
+    }
   }
   .available-properties {
     display: block;
@@ -1723,6 +1729,12 @@ form {
       }
     }
   }
+}
+
+.data-table {
+  overflow: auto;
+  width: 100%;
+  margin: 0 0 2rem;
 }
 
 #analysis {
